fixed relative alignment on dropdowns

--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,7 @@ body {
     height: 1.4em;
     border-radius: 2em;
     padding: .05em;
+    position: relative;
 }
 
 .dropdown:hover {
@@ -256,6 +257,10 @@ body {
     margin: 0%;
     margin-top: .5em;
     border-radius: 1em;    
+}
+
+.rhs .dropdown .menu-page {
+    left: -200%;
 }
 
 .dropdown .menu-page h1 {
